# TT

./: .gitignore  CLAUDE.md  README.md
grid_trading_bot/: .dockerignore  .env.example  .gitignore  COMPREHENSIVE_AUDIT_PROMPT.md  Dockerfile  SCAN_REPORT.md  SYSTEM_AUDIT_AND_FIX.md  TRADING_SYSTEM_AUDIT_PROMPT.md  check_orders.py  deploy.sh  docker-compose.yml  nohup.out  optimize_bb_neutral.py  optimize_grid_futures.py  optimize_max_return.py  optimize_rsi_grid.py  optimize_supertrend.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_all.py  run_backtest.py  run_bollinger.py  run_bollinger_backtest.py  run_bollinger_backtest_optimized.py  run_bollinger_backtest_real.py  run_bollinger_breakout.py  run_bollinger_full_backtest.py  run_bollinger_high_freq.py  run_bollinger_optimization.py  run_bollinger_optimize.py  run_bollinger_overfitting_test.py  run_bollinger_walkforward.py  run_console.py  run_cooldown_validation.py  run_fund_manager_test.py  run_grid_backtest_real.py  run_grid_backtest_stablecoin.py  run_grid_fine_tune.py  (+35 more)
grid_trading_bot/config/: .env.example  config.development.yaml  config.production.yaml  config.yaml
grid_trading_bot/optimization_results/: bb_neutral_optimization_20260128_232521.json  bb_neutral_optimization_20260128_233254.json  bb_neutral_optimization_20260131_220150.json  bb_neutral_optimization_20260131_225823.json  bb_neutral_optimization_20260131_233751.json  bb_neutral_optimization_20260201_002128.json  bb_neutral_optimization_20260201_003129.json  bb_neutral_optimization_20260201_125720.json  grid_futures_aggressive_20260128_195058.json  grid_futures_optimization_20260131_002143.json  grid_futures_optimization_20260131_150912.json  grid_futures_optimization_20260131_183218.json  grid_futures_optimization_20260201_010659.json  max_return_optimization_20260127_183809.json  rsi_grid_optimization_20260127_181843.json  rsi_grid_v2_optimization_20260129_181729.json  rsi_grid_v2_optimization_20260129_203637.json  rsi_grid_v2_optimization_20260129_235039.json  rsi_grid_v2_optimization_20260131_000419.json  rsi_grid_v2_optimization_20260201_143851.json  rsi_grid_v2_optimization_20260201_144139.json  rsi_grid_v2_optimization_20260201_154603.json  rsi_grid_v2_optimization_20260201_212022.json  supertrend_optimization_20260127_170100.json  supertrend_optimization_20260129_104143.json  supertrend_optimization_20260129_105907.json  supertrend_optimization_20260129_111514.json  supertrend_optimization_20260129_113047.json  supertrend_optimization_20260129_115027.json  supertrend_optimization_20260129_115802.json  supertrend_optimization_20260129_121048.json  supertrend_optimization_20260129_123601.json  supertrend_optimization_20260129_124423.json  supertrend_optimization_20260129_125652.json  supertrend_optimization_20260129_132146.json  supertrend_optimization_20260130_115203.json  supertrend_optimization_20260130_120233.json  supertrend_optimization_20260130_123125.json  supertrend_optimization_20260131_002604.json  supertrend_optimization_20260201_105617.json  (+2 more)
grid_trading_bot/output/: LOGIC_ERROR_AUDIT_2026-02-02.md  (+4 more)
trading_master/: pyproject.toml
(+447 files in other folders)
