[project]
name = "grid-trading-bot"
version = "0.1.0"
description = "Algorithmic grid trading bot with ML-based strategies"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "ccxt==4.5.33",
    "pydantic==2.12.5",
    "sqlalchemy==2.0.45",
    "asyncpg==0.31.0",
    "redis==7.1.0",
    "aiohttp==3.13.3",
    "websockets==16.0",
    "pyyaml==6.0.1",
    "python-dotenv==1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.14.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
